Settimo Commit: Prima parte del caso d'uso funzionante